--- a/personal_safety/personal_safety.run/runner/felix/config.ini
+++ b/personal_safety/personal_safety.run/runner/felix/config.ini
@@ -26,43 +26,71 @@ felix.auto.start.1=\
 "file:bundles/org.apache.felix.gogo.runtime_0.10.0.jar" \
 "file:bundles/org.apache.felix.gogo.shell_0.10.0.jar"
 felix.auto.start.5=\
+"file:bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
+"file:bundles/mw.container.xfaces_1.1.0.jar" \
+"file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
+"file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
 "file:bundles/org.osgi.compendium_4.1.0.jar" \
 "file:bundles/org.apache.felix.log_1.0.1.jar" \
 "file:bundles/org.apache.felix.configadmin_1.2.4.jar" \
 "file:bundles/org.apache.felix.fileinstall_3.1.10.jar" \
-"file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
-"file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
 "file:bundles/org.ops4j.pax.configmanager_0.2.2.jar" \
-"file:bundles/mw.container.xfaces_1.0.0.jar" \
-"file:bundles/mw.container.osgi_1.0.0.jar" \
-"file:bundles/mw.data.representation_1.0.0.jar" \
-"file:bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
-"file:bundles/mw.acl.interfaces_1.0.0.jar" \
-"file:bundles/mw.acl.upnp_1.0.0.jar" \
+"file:bundles/mw.container.osgi_1.1.0.jar" \
+"file:bundles/mw.acl.interfaces_1.1.0.jar" \
+"file:bundles/mw.acl.upnp_1.1.0.jar" \
 "file:bundles/org.apache.felix.upnp.basedriver_0.8.0.jar" \
-"file:bundles/mw.bus.model_1.0.0.jar" \
-"file:bundles/mw.bus.io_1.0.0.jar" \
-"file:bundles/mw.bus.service_1.0.0.jar" \
-"file:bundles/mw.bus.context_1.0.0.jar" \
-"file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
+"file:bundles/mw.bus.model_1.1.0.jar" \
+"file:bundles/mw.data.representation_1.1.0.jar" \
+"file:bundles/mw.bus.service_1.1.0.jar" \
+"file:bundles/mw.bus.context_1.1.0.jar" \
+"file:bundles/mw.bus.ui_1.1.0.jar" \
+"file:bundles/mw.data.serialization_1.1.0.jar" \
 "file:bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
+"file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
-"file:bundles/ont.phWorld_1.0.0.jar" \
-"file:bundles/ont.profile_1.0.0.jar" \
-"file:bundles/ont.risk_1.0.0.jar" \
-"file:bundles/ont.profile_1.0.0.jar" \
-"file:bundles/ui.dm.mobile_1.0.0.jar" \
-"file:bundles/ui.handler.gui_1.0.0.jar" \
-"file:bundles/personal_safety.sms_0.2.0.SNAPSHOT.jar"
-felix.auto.start.7=\
-"file:bundles/personal_safety.service_0.2.0.SNAPSHOT.jar" \
-"file:bundles/personal_safety.sw.panic_0.2.0.SNAPSHOT.jar"
-felix.auto.install.7="file:bundles/smp.test-location.publisher_0.2.0.SNAPSHOT.jar"
+"file:bundles/ont.phWorld_1.1.0.jar" \
+"file:bundles/ont.av_1.1.0.jar" \
+"file:bundles/ont.device.extra_1.1.0.jar" \
+"file:bundles/ont.furniture_1.1.0.jar" \
+"file:bundles/ont.profile_1.1.0.jar" \
+"file:bundles/ont.gesture.pointing_1.1.0.jar" \
+"file:bundles/ont.hazard_1.1.0.jar" \
+"file:bundles/ont.impairment_1.1.0.jar" \
+"file:bundles/ont.lighting_1.1.0.jar" \
+"file:bundles/ont.measurement_1.1.0.jar" \
+"file:bundles/ont.medication_1.1.0.jar" \
+"file:bundles/ont.multimedia_1.1.0.jar" \
+"file:bundles/ont.powersocket_1.1.0.jar" \
+"file:bundles/ont.profile.health_1.1.0.jar" \
+"file:bundles/ont.profile.userid_1.1.0.jar" \
+"file:bundles/ont.profile.uipreferences_1.1.0.jar" \
+"file:bundles/ont.risk_1.1.0.jar" \
+"file:bundles/ont.water_1.1.0.jar" \
+"file:bundles/ont.weather_1.1.0.jar" \
+"file:bundles/ont.window_1.1.0.jar" \
+"file:bundles/ont.profile.health_1.0.1.SNAPSHOT.jar" \
+"file:bundles/ont.impairment_1.0.1.SNAPSHOT.jar" \
+"file:bundles/ui.dm.mobile_1.1.0.jar" \
+"file:bundles/ui.handler.gui_1.1.0.jar" \
+"file:bundles/personal_safety.sms_0.0.0.B_0_1-SNAPSHOT.jar" \
+"file:bundles/personal_safety.service_0.0.0.B_0_1-SNAPSHOT.jar"
+felix.auto.start.7="file:bundles/personal_safety.sw.panic_0.0.0.B_0_1-SNAPSHOT.jar"
+felix.auto.install.7="file:bundles/smp.test-location.publisher_0.0.0.B_0_1-SNAPSHOT.jar"
 
 ##############################
 # System properties
 ##############################
-remoteOBR=
-skipTests=false
+platform.version=1.1.0
+gforge.project.url=http://forge.universaal.org/gf/project/new_services
+svn.base=scm:svn:http://forge.universaal.org/svn/new_services/trunk
 maven.compile.source=1.3
+gforge.project.name=new_services
+maven.compile.testSource=1.5
+service.name.svn=
+remoteOBR=
+svn.base.url=http://forge.universaal.org/gf/project/new_services/scmsvn/?path=%2Ftrunk%2F
+project.reporting.outputEncoding=UTF-8
+project.build.sourceEncoding=Cp1252
+skipTests=false
 maven.compile.target=1.3
+maven.compile.testTarget=1.5
