--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -31,6 +31,7 @@
 	</scm>
 
 	<modules>
+		<module>../ont.disease</module>
 		<module>../ont.health</module>
 		<module>../ont.healthmeasurement</module>
 		<module>../ont.message</module>
