Renamed medication_manager.service folder to medication.manager.service

--- a/medication/pom/pom.xml
+++ b/medication/pom/pom.xml
@@ -136,7 +136,7 @@
   </scm>
   <modules>
     <module>../ont.medMgr</module>
-    <module>../medication_manager.service</module>
+    <module>../medication.manager.service</module>
     <module>../test_medication_manager.service</module>
   </modules>
 </project>
