--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,8 @@ long_term_behav/ont.drools/.classpath
 long_term_behav/ont.drools/.project
 long_term_behav/ont.drools/.settings
 long_term_behav/ont.drools/target
+medication/medication.manager.service/*.iml
+medication/medication.manager.service/target
 medication/ont.medMgr/*.iml
 medication/ont.medMgr/target
 medication/pom/*.iml
