Renamed test_medication_manager.service folder to medication.manager.integration.tests

--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -137,6 +137,6 @@
   <modules>
     <module>../medication.manager.ont</module>
     <module>../medication.manager.service</module>
-    <module>../test_medication_manager.service</module>
+    <module>../medication.manager.integration.tests</module>
   </modules>
 </project>
