--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -21,7 +21,7 @@
 		<module>../personal_safety/personal_safety.pom</module>
 		<module>../food_shopping/pom</module>
 		<module>../safety_home/pom</module>
-		<module>../medication/pom</module>
+		<module>../medication/medication.manager.pom</module>
 		<module>../agenda/agenda.pom</module>
 	</modules>
 	
