--- a/medication/medication.manager.ont/pom.xml
+++ b/medication/medication.manager.ont/pom.xml
@@ -2,16 +2,56 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.universAAL.AALapplication</groupId>
-    <artifactId>medication_manager.pom</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
-    <relativePath>../pom</relativePath>
+    <groupId>org.universAAL.ontology</groupId>
+    <artifactId>ont.pom</artifactId>
+    <version>1.1.1-SNAPSHOT</version>
+    <!--
+    		<relativePath>../pom</relativePath>
+    -->
   </parent>
-  <artifactId>ont.medMgr</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <artifactId>medication.manager.ont</artifactId>
+  <version>1.1.1-SNAPSHOT</version>
   <name>Medication Manager ontology</name>
   <description>Medication Manager ontology</description>
   <packaging>bundle</packaging>
+
+  <properties>
+    <maven.compile.source>1.5</maven.compile.source>
+    <maven.compile.target>1.5</maven.compile.target>
+  </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.osgi.core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.middleware</groupId>
+      <artifactId>mw.data.representation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.middleware</groupId>
+      <artifactId>mw.bus.context</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.middleware</groupId>
+      <artifactId>mw.bus.ui</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.middleware</groupId>
+      <artifactId>mw.bus.service</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.ontology</groupId>
+      <artifactId>ont.phWorld</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.ontology</groupId>
+      <artifactId>ont.profile</artifactId>
+    </dependency>
+
+
+  </dependencies>
 
   <build>
     <plugins>
