--- a/health/ont.health/pom.xml
+++ b/health/ont.health/pom.xml
@@ -80,6 +80,13 @@
 						</instructions>
 					</configuration>
 				</plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <configuration>
+          <skipAttach>true</skipAttach>
+        </configuration>
+      </plugin>
 			</plugins>
 		</build>
 </project>
