add a full implementation to the module which is based on the profiling server

--- a/health/health.treat.manager/pom.xml
+++ b/health/health.treat.manager/pom.xml
@@ -24,6 +24,11 @@
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.health</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.universAAL.AALapplication</groupId>
+			<artifactId>health.manager</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
