--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -35,10 +35,10 @@
 		<module>../ont.health</module>
 		<module>../ont.healthmeasurement</module>
 		<module>../ont.message</module>
-		<module>../health.performedSession.manager</module>
+		<module>../health.treat.logger</module>
 		<module>../health.treat.manager</module>
 		<!-- module>../health.motivation</module -->
-		<module>../health.manager</module>
+<!-- 		<module>../health.manager</module> -->
 	</modules>
 
 	<dependencyManagement>
