--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,14 @@ health/health.motivation/src/main/resources/rules/*.brl
 health/health.motivation/target
 health/health.pom/.project
 health/health.pom/.settings
+health/health.profile.manager/.classpath
+health/health.profile.manager/.project
+health/health.profile.manager/.settings
+health/health.profile.manager/target
+health/health.test.treatment.generator/.classpath
+health/health.test.treatment.generator/.project
+health/health.test.treatment.generator/.settings
+health/health.test.treatment.generator/target
 health/health.treat.logger/.classpath
 health/health.treat.logger/.project
 health/health.treat.logger/.settings
