--- a/medication/medication.manager.service/pom.xml
+++ b/medication/medication.manager.service/pom.xml
@@ -19,6 +19,11 @@
       <artifactId>medication.manager.ont</artifactId>
       <version>1.1.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.universAAL.AALapplication</groupId>
+      <artifactId>medication.manager.ui</artifactId>
+      <version>B.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
