--- a/medication/medication.missing.services.simulation/pom.xml
+++ b/medication/medication.missing.services.simulation/pom.xml
@@ -19,6 +19,7 @@
       <artifactId>medication.manager.ont</artifactId>
       <version>1.1.1-SNAPSHOT</version>
     </dependency>
+
   </dependencies>
 
   <build>
@@ -30,7 +31,8 @@
         <configuration>
           <instructions>
             <Bundle-Name>${project.name}</Bundle-Name>
-            <Bundle-Activator>org.universAAL.AALapplication.medication_manager.simulation.impl.Activator</Bundle-Activator>
+            <Bundle-Activator>org.universAAL.AALapplication.medication_manager.simulation.impl.Activator
+            </Bundle-Activator>
             <Bundle-Description>${project.description}</Bundle-Description>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Private-Package>org.universAAL.AALapplication.medication_manager.simulation.impl</Private-Package>
