Added to ignore lists

--- a/.gitignore
+++ b/.gitignore
@@ -128,15 +128,21 @@ long_term_behav/ont.drools/.settings
 long_term_behav/ont.drools/target
 medication/medication.manager.integration.tests/*.iml
 medication/medication.manager.integration.tests/*.log
-medication/medication.manager.integration.tests/target
 medication/medication.manager.ont/*.iml
-medication/medication.manager.ont/target
+medication/medication.manager.pom/*.idea
 medication/medication.manager.pom/*.iml
 medication/medication.manager.service/*.iml
 medication/medication.manager.service/target
 medication/medication.manager.shell.commands/*.iml
+medication/medication.manager.shell.commands/target
 medication/medication.manager.ui.runner/*.iml
+medication/medication.manager.ui.runner/runner/bundles
+medication/medication.manager.ui.runner/runner/cache
+medication/medication.manager.ui.runner/runner/felix/cache
+medication/medication.manager.ui.runner/runner/log
+medication/medication.manager.ui.runner/target
 medication/medication.manager.ui/*.iml
+medication/medication.manager.ui/target
 medication/medication.missing.services.simulation/*.iml
 new_services.pom/.project
 new_services.pom/.settings
