--- a/agenda/agenda.eventSelection.client/pom.xml
+++ b/agenda/agenda.eventSelection.client/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>A.0.1-SNAPSHOT</version>
+		<version>B.0.1-SNAPSHOT</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
 	<packaging>bundle</packaging>
@@ -34,10 +34,10 @@
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.service</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.universAAL.middleware</groupId>-->
+<!--			<artifactId>mw.bus.ui</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.data.representation</artifactId>
@@ -107,8 +107,8 @@
 <!---->
 						<!--							org.universAAL.agenda.ont,-->
 						<!--							org.universAAL.agenda.ont.service,-->
-						<!--							org.universAAL.agendaEventSelectionTool.ont,-->
-						<!--							org.universAAL.agendaEventSelectionTool.ont.service,-->
+						<!--							org.universAAL.ontology.agendaEventSelection,-->
+						<!--							org.universAAL.ontology.agendaEventSelection.service,-->
 <!---->
 						<!--							java.sql.*,-->
 						<!--							javax.swing,-->
@@ -158,7 +158,7 @@
 				<dependency>
 					<groupId>org.universAAL.middleware</groupId>
 					<artifactId>mw.acl.upnp</artifactId>
-					<version>1.0.0</version>
+					<version>1.1.0</version>
 				</dependency>
 				<dependency>
 					<groupId>org.apache.felix</groupId>
