--- a/agenda/agenda.ont/pom.xml
+++ b/agenda/agenda.ont/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.universAAL.ontology</groupId>
 		<artifactId>ont.pom</artifactId>
-	    <version>1.0.0</version>
+	    <version>1.1.0</version>
 	    <!--  
 		<relativePath>../pom</relativePath>
 		-->
 	</parent>
 	<artifactId>agenda.ont</artifactId>
 	<packaging>bundle</packaging>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.1.1-SNAPSHOT</version>
 	<name>Agenda AAL Service Ontology </name>
 	<description>Agenda AAL Service ontology</description>
 	<properties>
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
-			<version>1.0.0</version>
+<!--			<version>1.0.0</version>-->
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
@@ -189,7 +189,7 @@
 				<dependency>
 					<groupId>org.universAAL.middleware</groupId>
 					<artifactId>mw.acl.upnp</artifactId>
-					<version>1.0.0</version>
+					<version>1.1.0</version>
 				</dependency>
 				<dependency>
 					<groupId>org.apache.felix</groupId>
