--- a/agenda/agenda.pom/pom.xml
+++ b/agenda/agenda.pom/pom.xml
@@ -4,11 +4,11 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>B.0</version>
 		<relativePath>../new_services.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>agenda.pom</artifactId>
-	<version>A.0.1-SNAPSHOT</version>
+	<version>B.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Agenda AAL Service Parent POM</name>
 	<description>Contains repository, deployment, and other info for Agenda	AAL Application</description>
@@ -50,67 +50,67 @@
 	</modules>
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.data.representation</artifactId>
-				<version>1.0.0</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.bus.context</artifactId>
-				<version>1.0.0</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.bus.service</artifactId>
-				<version>1.0.0</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.middleware</groupId>
-				<artifactId>mw.bus.io</artifactId>
-				<version>1.0.0</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.profile</artifactId>
-				<version>1.0.0</version>
-			</dependency>
-			<dependency>
-				<groupId>org.universAAL.ontology</groupId>
-				<artifactId>ont.phWorld</artifactId>
-				<version>1.0.0</version>
-			</dependency>
+<!--			<dependency>-->
+<!--				<groupId>org.universAAL.middleware</groupId>-->
+<!--				<artifactId>mw.data.representation</artifactId>-->
+<!--				<version>1.0.0</version>-->
+<!--			</dependency>-->
+<!--			<dependency>-->
+<!--				<groupId>org.universAAL.middleware</groupId>-->
+<!--				<artifactId>mw.bus.context</artifactId>-->
+<!--				<version>1.0.0</version>-->
+<!--			</dependency>-->
+<!--			<dependency>-->
+<!--				<groupId>org.universAAL.middleware</groupId>-->
+<!--				<artifactId>mw.bus.service</artifactId>-->
+<!--				<version>1.0.0</version>-->
+<!--			</dependency>-->
+<!--			<dependency>-->
+<!--				<groupId>org.universAAL.middleware</groupId>-->
+<!--				<artifactId>mw.bus.io</artifactId>-->
+<!--				<version>1.0.0</version>-->
+<!--			</dependency>-->
+<!--			<dependency>-->
+<!--				<groupId>org.universAAL.ontology</groupId>-->
+<!--				<artifactId>ont.profile</artifactId>-->
+<!--				<version>1.0.0</version>-->
+<!--			</dependency>-->
+<!--			<dependency>-->
+<!--				<groupId>org.universAAL.ontology</groupId>-->
+<!--				<artifactId>ont.phWorld</artifactId>-->
+<!--				<version>1.0.0</version>-->
+<!--			</dependency>-->
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>agenda.ont</artifactId>
-				<version>1.0.1-SNAPSHOT</version>
+				<version>1.1.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.universAAL.ontology</groupId>
 				<artifactId>agenda.eventSelection.ont</artifactId>
-				<version>1.0.1-SNAPSHOT</version>
+				<version>1.1.1-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.felix</groupId>
-					<artifactId>maven-bundle-plugin</artifactId>
-					<extensions>true</extensions>
-					<executions>
-						<execution>
-							<id>bundle-manifest</id>
-							<phase>process-classes</phase>
-							<goals>
-								<goal>manifest</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+<!--		<pluginManagement>-->
+<!--			<plugins>-->
+<!--				<plugin>-->
+<!--					<groupId>org.apache.felix</groupId>-->
+<!--					<artifactId>maven-bundle-plugin</artifactId>-->
+<!--					<extensions>true</extensions>-->
+<!--					<executions>-->
+<!--						<execution>-->
+<!--							<id>bundle-manifest</id>-->
+<!--							<phase>process-classes</phase>-->
+<!--							<goals>-->
+<!--								<goal>manifest</goal>-->
+<!--							</goals>-->
+<!--						</execution>-->
+<!--					</executions>-->
+<!--				</plugin>-->
+<!--			</plugins>-->
+<!--		</pluginManagement>-->
 		<plugins>
 			<plugin>
 				<groupId>org.universAAL.support</groupId>
