--- a/agenda/agenda.runner/runner/felix/config.ini
+++ b/agenda/agenda.runner/runner/felix/config.ini
@@ -49,7 +49,6 @@ felix.auto.start.5=\
 "file:bundles/ont.phWorld_1.0.0.jar" \
 "file:bundles/ont.profile_1.0.0.jar" \
 "file:bundles/ui.dm.mobile_1.0.0.jar" \
-"file:bundles/ui.handler.gui_1.0.0.jar" \
 "file:bundles/mw.bus.context_1.0.0.jar" \
 "file:bundles/org.apache.felix.javax.servlet_1.0.0.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-jetty-bundle_1.0.3.jar" \
@@ -60,7 +59,9 @@ felix.auto.start.5=\
 "file:bundles/agenda.ont_1.0.1.SNAPSHOT.jar" \
 "file:bundles/agenda.client_0.0.0.A_0_1-SNAPSHOT.jar" \
 "file:bundles/com.mysql.jdbc_5.1.17.jar" \
+"file:bundles/wrap_mvn_activesoap_jaxp-api_1.3_0.jar" \
 "file:bundles/agenda.server_0.0.0.A_0_1-SNAPSHOT.jar" \
+"file:bundles/wrap_mvn_com.googlecode.jinahya_ocap-api_1.2_0.jar" \
 "file:bundles/agenda.eventSelection.ont_1.0.1.SNAPSHOT.jar" \
 "file:bundles/agenda.eventSelection.client_0.0.0.A_0_1-SNAPSHOT.jar" \
 "file:bundles/agenda.gui_0.0.0.A_0_1-SNAPSHOT.jar" \
@@ -70,4 +71,4 @@ felix.auto.start.5=\
 ##############################
 # System properties
 ##############################
-eclipsePluginsDir=f:\eclipse\eclipse-SDK-3.5.1-win32\plugins
+maven.test.skip=true
