--- a/agenda/agenda.server/pom.xml
+++ b/agenda/agenda.server/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>A.0.1-SNAPSHOT</version>
+		<version>B.0.1-SNAPSHOT</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
 	<artifactId>agenda.server</artifactId>
@@ -44,7 +44,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.bus.io</artifactId>
+			<artifactId>mw.bus.ui</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
@@ -189,7 +189,7 @@
 				<dependency>
 					<groupId>org.universAAL.middleware</groupId>
 					<artifactId>mw.acl.upnp</artifactId>
-					<version>1.0.0</version>
+					<version>1.1.0</version>
 				</dependency>
 				<dependency>
 					<groupId>org.apache.felix</groupId>
