--- a/health/health.motivation/pom.xml
+++ b/health/health.motivation/pom.xml
@@ -33,9 +33,10 @@
 			<artifactId>mw.bus.service</artifactId>
 		</dependency>
 		<dependency>
-        	<groupId>org.universAAL.ontology</groupId>
-			<artifactId>ont.health</artifactId>
-        </dependency>
+				<groupId>org.universAAL.ontology</groupId>
+				<artifactId>ont.health</artifactId>
+				<version>1.1.1-SNAPSHOT</version>
+			</dependency>
 		<dependency>
             <groupId>org.drools</groupId>
             <artifactId>drools-core</artifactId>
